@@ -567,6 +567,29 @@ dl.gallery-item {
 .gallery-columns-9 img { height: auto; max-width: 59px; }
 .gallery-columns-10 img { height: auto; max-width: 55px; }
 
+/* --- Post Formats --- */
+.format-aside { margin: 0 0 0 60px; }
+.format-aside .glyph { float: left; margin: 50px 0 0 -60px; }
+.format-aside h1, .format-aside .postdata { text-align: right; }
+span.aside-glyph { font-family: "Times New Roman", Arial, sans-serif; font-size: 1000% }
+
+.format-quote { margin: 0 0 0 60px; padding: 0 0 30px; }
+.format-quote .glyph { float: left; margin: 50px 0 0 -60px; }
+.format-quote h1, .format-quote .postdata { text-align: right; }
+span.quote-glyph { font-family: "Times New Roman", Arial, sans-serif; font-size: 1000% }
+
+.format-status { margin: 0 0 0 60px; padding: 0 0 30px; }
+.format-status .glyph { float: left; margin: 50px 0 0 -60px; }
+.format-status h1, .format-status .postdata { text-align: right; }
+span.status-glyph { font-family: "Times New Roman", Arial, sans-serif; font-size: 500%; }
+
+.transparent {
+  zoom: 1;
+  filter: alpha(opacity=25);
+  opacity: 0.25;
+}
+/* --- End: Post Formats --- */
+
 /* === SIDEBAR == */
 /* Organized by general layout of sidebar template */
 
